<resources>
    <string name="app_name">What to cook?</string>
    <string name="title">What to cook?</string>
    <string name="action_settings">Settings</string>
    <string name="ingredientEditText">Enter your ingredient here and hit enter</string>
    <string name="add_ingredient_title">Add Your Ingredients</string>
    <string name="add_recipe_title">Add New Recipes</string>
    <string name="recipe_name">Recipe Name: </string>
    <string name="recipe_time">Cooking time: </string>
    <string name="difficulty_level">Level of Difficulty: </string>

    <string-array name="difficulty_list">
        <item>Select</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string name="recipe_ingredients">Add Recipe Ingredients: </string>
    <string name="recipe_steps">Directions to prepare: </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="recipes_list">List Of Recipes</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="title_activity_recipe_details">RecipeDetailsActivity</string>
    <string name="title_activity_recipe_detail">RecipeDetailActivity</string>
</resources>
