<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/add_recipe_background"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_name"
            android:textColor="@color/new_recipe_textcolor"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_toRightOf="@id/nameText"/>


        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_time"
            android:textColor="@color/new_recipe_textcolor"
            android:layout_below="@id/nameText"
            android:paddingTop="20dp"
            android:paddingRight="10dp"
            />

        <EditText
            android:id="@+id/timeEditText"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:numeric="integer"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_below="@id/nameEditText"
            android:layout_toRightOf="@id/timeText"
            android:layout_toEndOf="@id/timeText"/>
        <TextView
            android:id="@+id/minsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:layout_toRightOf="@id/timeEditText"
            android:layout_toEndOf="@id/timeEditText"
            android:text="Mins"/>

        <TextView
            android:id="@+id/difficultyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_level"
            android:textColor="@color/new_recipe_textcolor"
            android:layout_below="@id/timeText"
            android:paddingTop="20dp"
            android:paddingRight="10dp"/>

        <Spinner
            android:id="@+id/difficultySpinner"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:entries="@array/difficulty_list"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_below="@id/timeEditText"
            android:layout_toRightOf="@id/difficultyText"
            android:layout_toEndOf="@id/difficultyText"/>

        <TextView
            android:id="@+id/ingredientText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_ingredients"
            android:textColor="@color/new_recipe_textcolor"
            android:layout_below="@id/difficultyText"
            android:paddingTop="20dp"
            android:paddingRight="10dp"/>

        <EditText
            android:id="@+id/ingrEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:hint="Add and hit enter"
            android:layout_below="@id/difficultySpinner"
            android:layout_toRightOf="@id/ingredientText"
            android:layout_toEndOf="@id/ingredientText"/>

        <ListView
            android:id="@+id/addIngredientList"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:paddingBottom="30dp"
            android:paddingLeft="170dp"
            android:paddingRight="80dp"
            android:textColor="@color/new_recipe_textcolor"
            android:layout_below="@id/ingrEditText">
        </ListView>


        <TextView
            android:id="@+id/methodText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_steps"
            android:textColor="@color/new_recipe_textcolor"
            android:layout_below="@id/ingredientText"
            android:paddingTop="170dp"
            android:paddingRight="10dp"/>

        <EditText
            android:id="@+id/methodEditText"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_below="@id/addIngredientList"
            android:layout_toRightOf="@id/methodText"/>


        <Button
            android:id="@+id/recipeBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"    />

        <Button
            android:id="@+id/addNewRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Recipe"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"/>

</RelativeLayout>

